--- a/spec/support/vcr_cassettes/mpi/add_person/add_person_internal_error_request.yml
+++ b/spec/support/vcr_cassettes/mpi/add_person/add_person_internal_error_request.yml
@@ -2,23 +2,17 @@
 http_interactions:
 - request:
     method: post
-    uri: "<MPI_URL>"
+    uri: http://www.example.com/
     body:
       encoding: UTF-8
-      string: |
+      string: |+
         <?xml version="1.0" encoding="utf-8"?>
-        <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/"
-          xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/"
-          xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+        <soap:Envelope xmlns:soap="http://schemas.xmlsoap.org/soap/envelope/" xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
           <soap:Body>
-            <idm:PRPA_IN201302UV02 xmlns:idm="http://vaww.oed.oit.va.gov"
-              xmlns:xsi="http://www.w3.org/2001/XMLSchema‐instance" xsi:schemaLocation="urn:hl7‐org:v3 ../../schema/HL7V3/NE2008/multicacheschemas/PRPA_IN201302UV02.xsd"
-              xmlns="urn:hl7‐org:v3" ITSVersion="XML_1.0">
-              <id extension="200VGOV-a632f12b-5330-4b02-9cef-6d2633f7b501" root="22a0f9e0-4454-11dc-a6be-3603d6866807"/>
-              <creationTime value="20220805211942"/>
+            <idm:PRPA_IN201301UV02 xmlns:idm="http://**********" xmlns:xsi="http://www.w3.org/2001/XMLSchema‐instance" xsi:schemaLocation="urn:hl7‐org:v3 ../../schema/HL7V3/NE2008/multicacheschemas/PRPA_IN201305UV02.xsd" xmlns="urn:hl7‐org:v3" ITSVersion="XML_1.0">      <id extension="200VGOV-1373004c-e23e-4d94-90c5-5b101f6be54a" root="22a0f9e0-4454-11dc-a6be-3603d6866807"/>
+              <creationTime value="20200207005744"/>
               <versionCode code="4.1"/>
-              <interactionId extension="PRPA_IN201302UV02" root="2.16.840.1.113883.1.6"/>
+              <interactionId extension="PRPA_IN201301UV02" root="2.16.840.1.113883.1.6"/>
               <processingCode code="T"/>
               <processingModeCode code="T"/>
               <acceptAckCode code="AL"/>
@@ -32,32 +26,53 @@ http_interactions:
                   <id extension="200VGOV" root="2.16.840.1.113883.4.349"/>
                 </device>
               </sender>
+              <attentionLine>
+                <keyWordText>Search.Token</keyWordText>
+                <value xsi:type="ST">WSDOC2002061956255081680185785</value>
+              </attentionLine>
               <controlActProcess classCode="CACT" moodCode="EVN">
+                <dataEnterer contextControlCode="AP" typeCode="ENT">
+                  <assignedPerson classCode="ASSIGNED">
+                    <id extension="1008841684V642518^NI^200M^USVHA" root="2.16.840.1.113883.4.349"/>
+                    <assignedPerson determinerCode="INSTANCE" classCode="PSN">
+                      <name>
+                        <given>JON</given>
+                        <family>JERICHO</family>
+                      </name>
+                    </assignedPerson>
+                    <representedOrganization determinerCode="INSTANCE" classCode="ORG">
+                      <id extension="vagov" root="2.16.840.1.113883.4.349"/>
+                      <code code="2020-02-07 00:57:44"/>
+                      <desc>vagov</desc>
+                      <telecom value="1.2.3.4"/>
+                    </representedOrganization>
+                  </assignedPerson>
+                </dataEnterer>
                 <subject typeCode="SUBJ">
                   <registrationEvent classCode="REG" moodCode="EVN">
                     <id nullFlavor="NA"/>
                     <statusCode code="active"/>
                     <subject1 typeCode="SBJ">
                       <patient classCode="PAT">
-                        <id extension="1013677101V363970^NI^200M^USVHA^P" root="2.16.840.1.113883.4.349"/>
+                        <id extension="1008841684V642518^NI^200M^USVHA" root="2.16.840.1.113883.4.349"/>
                         <statusCode code="active"/>
                         <patientPerson>
                           <name use="L">
-                            <given>abraham</given>
-                            <family>lincoln</family>
+                            <given>JON</given>
+                            <family>JERICHO</family>
                           </name>
-                          <birthTime value="18090212"/>
-                          <id extension="384759483^NI^200DOD^USDOD^A" root="2.16.840.1.113883.3.42.10001.100001.12"/>
+                          <birthTime value="19600507"/>
                           <asOtherIDs classCode="SSN">
-                            <id extension="796111863" root="2.16.840.1.113883.4.1"/>
+                            <id extension="333874412" root="2.16.840.1.113883.4.1"/>
                             <scopingOrganization determinerCode="INSTANCE" classCode="ORG">
                               <id root="2.16.840.1.113883.4.1"/>
                             </scopingOrganization>
                           </asOtherIDs>
                           <asOtherIDs classCode="PAT">
-                            <id extension="384759483^NI^200DOD^USDOD^A" root="2.16.840.1.113883.3.42.10001.100001.12"/>
-                            <scopingOrganization classCode="ORG" determinerCode="INSTANCE">
-                              <id root="2.16.840.1.113883.4.349" />
+                            <id extension="PROXY_ADD^PI^200VBA^USVBA" root="2.16.840.1.113883.4.349"/>
+                            <scopingOrganization determinerCode="INSTANCE" classCode="ORG">
+                              <id extension="VBA" root="2.16.840.1.113883.4.349"/>
+                              <name>MVI.ORCHESTRATION</name>
                             </scopingOrganization>
                           </asOtherIDs>
                         </patientPerson>
@@ -81,9 +96,10 @@ http_interactions:
                   </registrationEvent>
                 </subject>
               </controlActProcess>
-            </idm:PRPA_IN201302UV02>
+            </idm:PRPA_IN201301UV02>
           </soap:Body>
         </soap:Envelope>
+
     headers:
       Accept:
       - text/xml;charset=UTF-8
@@ -91,84 +107,70 @@ http_interactions:
       - text/xml;charset=UTF-8
       User-Agent:
       - Vets.gov Agent
-      Soapaction:
+      soapaction:
       - PRPA_IN201301UV02
       Date:
-      - Thu, 12 May 2022 18:17:30 GMT
+      - Fri, 07 Feb 2020 00:57:44 GMT
       Content-Length:
-      - '3732'
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      - '4635'
   response:
     status:
       code: 200
       message: OK
     headers:
-      Accept-Ranges:
-      - bytes
-      Cache-Control:
-      - max-age=604800
-      Content-Type:
-      - text/html; charset=UTF-8
-      Date:
-      - Thu, 12 May 2022 18:17:30 GMT
-      Etag:
-      - '"3147526947+gzip"'
-      Expires:
-      - Thu, 19 May 2022 18:17:30 GMT
-      Last-Modified:
-      - Thu, 17 Oct 2019 07:18:26 GMT
-      Server:
-      - EOS (vny/044F)
-      Vary:
-      - Accept-Encoding
-      Transfer-Encoding:
+      x-backside-transport:
+      - OK OK,OK OK
+      transfer-encoding:
       - chunked
+      date:
+      - Fri, 07 Feb 2020 00:57:44 GMT
+      content-type:
+      - text/xml
+      x-global-transaction-id:
+      - 4bae058f5e3cb6080028a411
+      connection:
+      - close
     body:
       encoding: UTF-8
-      string: |
+      string: |-
         <?xml version="1.0" encoding="UTF-8"?>
-        <env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema"
-          xmlns:env="http://schemas.xmlsoap.org/soap/envelope/"
-          xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/"
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+        <env:Envelope xmlns:soapenc="http://schemas.xmlsoap.org/soap/encoding/" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:env="http://schemas.xmlsoap.org/soap/envelope/" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
           <env:Header/>
           <env:Body>
-            <idm:MCCI_IN000002UV01 ITSVersion="XML_1.0" xsi:schemaLocation="urn:hl7-org:v3 ../../schema/HL7V3/NE2008/multicacheschemas/MCCI_IN000002UV01.xsd"
-              xmlns="urn:hl7-org:v3"
-              xmlns:idm="http://vaww.oed.oit.va.gov">
-              <id extension="WSDOC2208031915266070419759472" root="2.16.840.1.113883.4.349"/>
-              <creationTime value="20220803191526"/>
+            <idm:MCCI_IN000002UV01 ITSVersion="XML_1.0" xsi:schemaLocation="urn:hl7-org:v3 ../../schema/HL7V3/NE2008/multicacheschemas/MCCI_IN000002UV01.xsd" xmlns="urn:hl7-org:v3" xmlns:idm="http://********">
+              <id extension="WSDOC2002061957449380569866168" root="2.16.840.1.113883.4.349"/>
+              <creationTime value="20200206195744"/>
               <versionCode code="4.1"/>
               <interactionId extension="MCCI_IN000002UV01" root="2.16.840.1.113883.1.6"/>
               <processingCode code="T"/>
               <processingModeCode code="T"/>
               <acceptAckCode code="NE"/>
               <receiver typeCode="RCV">
-                <device classCode="DEV" determinerCode="INSTANCE">
+                <device determinerCode="INSTANCE" classCode="DEV">
                   <id extension="200VGOV" root="2.16.840.1.113883.4.349"/>
                 </device>
               </receiver>
               <sender typeCode="SND">
-                <device classCode="DEV" determinerCode="INSTANCE">
+                <device determinerCode="INSTANCE" classCode="DEV">
                   <id extension="200M" root="2.16.840.1.113883.4.349"/>
                 </device>
               </sender>
               <acknowledgement>
-                <typeCode code="AE"/>
+                <typeCode code="AR"/>
                 <targetMessage>
-                  <id extension="200VGOV-0a8c7539-3490-4c5c-b36f-9df9c16af3a2" root="22a0f9e0-4454-11dc-a6be-3603d6866807"/>
+                  <id extension="200VGOV-1373004c-e23e-4d94-90c5-5b101f6be54a" root="22a0f9e0-4454-11dc-a6be-3603d6866807"/>
                 </targetMessage>
                 <acknowledgementDetail>
-                  <code codeSystem="2.16.840.1.113883.3.2017.11.6.1" code="PNUPDATE000005"  displayName="ICN-EDI PI Correlation does not exist"/>
-                  <text>Enterprise ID 1012592956V095840 passed is not linked to ID e4fd21a4-a677-4118-8c57-1f630cbc2a06</text>
+                  <code codeSystem="2.16.840.1.113883.5.1100" code="INTERR" displayName="Internal System Error"/>
+                  <text>Internal System Error</text>
                 </acknowledgementDetail>
                 <acknowledgementDetail>
-                  <text>Correlation NOT FOUND</text>
+                  <text>Internal System Error</text>
                 </acknowledgementDetail>
               </acknowledgement>
             </idm:MCCI_IN000002UV01>
           </env:Body>
         </env:Envelope>
-  recorded_at: Thu, 12 May 2022 18:17:30 GMT
-recorded_with: VCR 6.1.0
+    http_version:
+  recorded_at: Fri, 07 Feb 2020 00:57:45 GMT
+recorded_with: VCR 5.0.0
